# ALGORITMI_CALCOLATORI_21_22

./: .gitignore  Relazione_Progetto.docx
Progetto_v3/: .gitignore  CMakeLists.txt  Classroom.cpp  Classroom.h  Course.h  Date.cpp  Date.h  Exam.cpp  ExamDay.cpp  ExamDay.h  InvalidDbException.cpp  Professor.cpp  Professor.h  SessionLog.cpp  SessionLog.h  SessionYear.cpp  SpecificYearCourse.cpp  SpecificYearCourse.h  Student.cpp  Student.h  StudyCourse.h  SystemLog.cpp  SystemLog.h  University.cpp  University.h  main.cpp
Progetto_v3/Classi/: AccademicYear.cpp  AccademicYear.h  Calendar.cpp  Calendar.hpp  Classroom.cpp  Classroom.h  Course.cpp  Course.h  Date.cpp  Date.h  DbException.cpp  DbException.h  Exam.cpp  Exam.h  ExamDay.cpp  ExamDay.h  ExamDay.hpp  InvalidDbException.cpp  InvalidDbException.h  Parse.hpp  Professor.cpp  Professor.h  SessionLog.cpp  SessionLog.h  SessionYear.cpp  SessionYear.h  SessionYear.hpp  SpecificYearCourse.cpp  SpecificYearCourse.h  Student.cpp  Student.h  StudyCourse.cpp  StudyCourse.h  SystemLog.cpp  SystemLog.h  University.cpp  University.h  UniversityMember.cpp  UniversityMember.h
Progetto_v3/Inputs/: add_cds.txt  add_courses.txt  insert_courses_22-23.txt  insert_courses_23-24.txt
Progetto_v3/Sources/: aule_list_file.txt  cds_list_file.txt  classroom_update_list_file.txt  courses_insert_file.txt  courses_list_file.txt  dateSessioni.txt  db_aule.txt  db_corsi.txt  db_corsi_studio.txt  db_professori.txt  db_studenti.txt  file_indisponibilita.txt  professor_update_list_file.txt  student_list_file.txt  student_update_list_file.txt  students_info_file.txt  titoli_corsi.txt  (+1 more)
(+81 files in other folders)
