cmake_minimum_required(VERSION 3.15 )
project(Progetto_v3)

set(CMAKE_CXX_STANDARD 20)

add_executable(Progetto_v3 main.cpp Classi/UniversityMember.cpp Classi/UniversityMember.h Classi/Student.cpp Classi/Student.h Classi/Professor.cpp Classi/Professor.h Classi/Course.cpp Classi/Course.h Classi/SpecificYearCourse.cpp Classi/SpecificYearCourse.h Classi/Exam.cpp Classi/Exam.h Classi/StudyCourse.cpp Classi/StudyCourse.h Classi/AccademicYear.cpp Classi/AccademicYear.h Classi/University.cpp Classi/University.h Classi/Classroom.cpp Classi/Classroom.h)
